--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rishav-chanda-portfolio",
+  "name": "naveen-shekhar-portfolio",
   "version": "0.1.0",
-  "homepage": "https://rishavchanda.github.io",
+  "homepage": "https://portfolio-website-git-main-naveen-shekhar-mishra-s-projects.vercel.app/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
